Text aligned to the left on mobile (bug)

--- a/slider-custom-v3.2.3.css
+++ b/slider-custom-v3.2.3.css
@@ -59,6 +59,7 @@
   overflow: hidden;
   line-height: 1.3;
   letter-spacing: 1px;
+  text-align: left;
 }
 .sl-counter {
   display: inline-block;
@@ -81,14 +82,14 @@
   word-wrap: break-word;
   overflow: hidden;
   max-width: calc(616px + 80px);
+  text-align: left;
 }
 .sl-thumbnails-container {
   display: flex;
   align-items: center;
   justify-content: center;
   max-width: calc(616px + 80px);
-  margin: 0 0 5rem 0;
-  max-height: 6rem;
+  margin: 0 !important;
 }
 .sl-thumbnails {
   display: flex;
@@ -96,8 +97,8 @@
   overflow-x: auto;
   overflow-y: hidden;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   max-width: calc(616px + 80px);
   position: relative;
 }
